fix: apply featured-products-service code review fixes
- Replace banned quarkus-rest with quarkus-resteasy + resteasy-jsonb; exclude
  transitive quarkus-rest pulled in by products-api
- Remove unused quarkus-jdbc-postgresql and commented-out Eureka dependency
- Add EmbeddedCategory / EmbeddedPromotion typed entity classes; drop raw List<Document>
- Add IndexInitializer: unique index on productID at startup (prevents duplicate docs
  and turns every findByUuid / delete into an index lookup)
- Guard null categories/promotions in ProductService with Optional.ofNullable
- Make mapProductToProductMongoEntity private; replace System.out.println with Logger
- Remove dead @ConfigProperty page fields in FeaturedProductsResource; simplify stream
- Add GlobalExceptionHandler, FunctionalException, ErrorResponse per project convention
- Fix toCategoryDto to restore id field; change componentModel to "cdi"
- Replace Dev-Services empty connection strings with proper MongoDbTestResource /
  KafkaTestResource; add @QuarkusTestResource to KafkaEventConsumerTest

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>